@@ -11,26 +11,24 @@
  */
 package gov.nist.oar.distrib.storage;
 
-import org.junit.rules.TestRule;
-import org.junit.runners.model.Statement;
-import org.junit.runner.Description;
-import org.junit.AssumptionViolatedException;
+import java.io.File;
+import java.io.IOException;
+import java.lang.ProcessBuilder.Redirect;
+import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URL;
 
+import org.junit.jupiter.api.extension.AfterAllCallback;
+import org.junit.jupiter.api.extension.BeforeAllCallback;
+import org.junit.jupiter.api.extension.ExtensionContext;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.URL;
-import java.net.MalformedURLException;
-import java.net.HttpURLConnection;
-import java.io.IOException;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.lang.ProcessBuilder.Redirect;
-
 /**
- * a JUnit ClassRule that starts a S3Mock server in a separate process for testing purposes
+ * A JUnit 5 Extension that starts an S3Mock server in a separate process for testing purposes.
  */
-public class S3MockTestRule implements TestRule {
+public class S3MockTestRule implements BeforeAllCallback, AfterAllCallback {
 
     static final String _testurl = "http://localhost:9090/";
     private File serverdir = null;
@@ -46,15 +44,15 @@ public class S3MockTestRule implements TestRule {
 
     public void startServer() throws IOException {
         String scrp = script.getAbsolutePath();
-        log.info("Starting server in dir="+serverdir.toString());
+        log.info("Starting server in dir=" + serverdir.toString());
         log.info("  See server log in s3mock-server.log");
         server = new ProcessBuilder(scrp).directory(serverdir)
-                                         .redirectErrorStream(true)
-                                         .redirectOutput(Redirect.to(new File("s3mock-server.log")))
-                                         .start();
-        if (! server.isAlive())
-            throw new IllegalStateException("Server exited prematurely; status="+
-                                            Integer.toString(server.exitValue()));
+                .redirectErrorStream(true)
+                .redirectOutput(Redirect.to(new File("s3mock-server.log")))
+                .start();
+        if (!server.isAlive())
+            throw new IllegalStateException("Server exited prematurely; status=" +
+                    Integer.toString(server.exitValue()));
     }
 
     public void stopServer() {
@@ -65,33 +63,30 @@ public class S3MockTestRule implements TestRule {
     public boolean checkAvailable() throws MalformedURLException {
         HttpURLConnection conn = null;
         try {
-            conn = (HttpURLConnection) (new URL(_testurl)).openConnection();
+            URL url = URI.create(_testurl).toURL();
+            conn = (HttpURLConnection) url.openConnection();
             conn.setInstanceFollowRedirects(true);
             conn.setConnectTimeout(1000);
             conn.setReadTimeout(1000);
             int status = conn.getResponseCode();
             conn.getContent();
 
-            if (status >= 200 && status < 300)
-                return true;
+            return status >= 200 && status < 300;
+        } catch (IOException ex) {
+            log.warn("S3Mock Service is not up yet (" + ex.getMessage() + ")");
             return false;
-        }
-        catch (IOException ex) {
-            log.warn("S3Mock Service is not up yet ("+ex.getMessage()+")");
-            return false;
-        }
-        finally {
+        } finally {
             if (conn != null) conn.disconnect();
         }
     }
 
     public boolean waitForServer(long timeoutms) throws InterruptedException, MalformedURLException {
         long starttime = System.currentTimeMillis();
-        
+
         while (System.currentTimeMillis() - starttime < timeoutms) {
-            if (! server.isAlive())
-                throw new IllegalStateException("Server exited prematurely; status="+
-                                                Integer.toString(server.exitValue()));
+            if (!server.isAlive())
+                throw new IllegalStateException("Server exited prematurely; status=" +
+                        Integer.toString(server.exitValue()));
             if (checkAvailable())
                 return true;
             Thread.sleep(2000);
@@ -101,23 +96,16 @@ public class S3MockTestRule implements TestRule {
     }
 
     @Override
-    public Statement apply(Statement base, Description desc) {
-        return new Statement() {
-            @Override
-            public void evaluate() throws Throwable {
-                if (! script.exists())
-                    throw new AssumptionViolatedException(script.toString() +
-                                                   ": S3Mock server script not found (skipping AWS tests)");
-                startServer();
-                try {
-                    if (! waitForServer(30000))
-                        throw new IllegalStateException("S3Mock server not responding after 30s.");
-                    base.evaluate();
-                }
-                finally {
-                    stopServer();
-                }
-            }
-        };
+    public void beforeAll(ExtensionContext context) throws Exception {
+        if (!script.exists())
+            throw new IllegalStateException(script.toString() + ": S3Mock server script not found (skipping AWS tests)");
+        startServer();
+        if (!waitForServer(30000))
+            throw new IllegalStateException("S3Mock server not responding after 30s.");
     }
-}    
+
+    @Override
+    public void afterAll(ExtensionContext context) {
+        stopServer();
+    }
+}
